--- a/Random-BestTiny/README
+++ b/Random-BestTiny/README
@@ -43,8 +43,8 @@ review the file, change the first command to have the target directory:
 
 REBUILDING
 ---------------------------
-        perl realclean;		#clear all standard temporary files
-        perl Build.PL;		#generate the Build script
+        perl Build realclean;	#optional: clear all prior temporary files
+        perl Build.PL;		#optional: generate fresh Build script
 	perl Build dist		#build new
 	perl Build distcheck	#check distribution
 
@@ -69,9 +69,10 @@ Because the program is licensed free of charge, there is no warranty.
   AND FITNESS FOR A PARTICULAR PURPOSE.
 
 
-NOTES
+REFERENCES
 ---------------------------
- http://obsidianrook.com/devnotes/talks/writing_cpan_modules/01-writing_cpan_modules.html
+http://www.perlfoundation.org/cpan_licensing_guidelines
+http://obsidianrook.com/devnotes/talks/writing_cpan_modules/01-writing_cpan_modules.html
 
 
 --
