--- a/Random-BestTiny/README
+++ b/Random-BestTiny/README
@@ -1,3 +1,4 @@
+Random::BestTiny is copyright 2010 by, 2016 Gilbert Healton.
 
 OVERVIEW
 ---------------------------
@@ -50,11 +51,13 @@ REBUILDING
 
 
 
-COPYRIGHT, LICENSE, and WARRANTY
+AUTHOR
 ---------------------------
+   Gilbert Healton   gilbertAThealtonDOTnet
 
-This program and documentation is copyright 2010 by Gilbert Healton.
-All rights reserved.
+
+LICENSE, and WARRANTY
+---------------------------
 
 This program is free software; you can redistribute it and/or modify it
 under the same terms as Perl itself.
